# blankRustPWA

./: README.md
blank-dioxus-ui/: Cargo.toml  Dioxus.toml  index.html
blank-dioxus-ui/assets/: manifest.json
blank-leptos-ui/: Cargo.toml  index.html
